@@ -1,81 +1,122 @@
 package com.fooddelivery.e2e.base;
 
-import com.microsoft.playwright.Browser;
-import com.microsoft.playwright.BrowserContext;
-import com.microsoft.playwright.Page;
-import com.microsoft.playwright.Playwright;
+import com.microsoft.playwright.*;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.extension.ExtendWith;
 
+import java.nio.file.Paths;
+import java.util.Arrays;
+import java.util.List;
+
+/**
+ * Base class for all E2E tests.
+ * <p>
+ * Provides up to 4 isolated browser contexts (customer, restaurant, rider, admin)
+ * with geolocation, notifications, video recording, and console logging.
+ * </p>
+ */
+@ExtendWith(ScreenshotOnFailure.class)
 public abstract class TestBase {
+
     protected static Playwright playwright;
     protected static Browser browser;
 
     protected BrowserContext customerContext;
     protected BrowserContext restaurantContext;
     protected BrowserContext riderContext;
+    protected BrowserContext adminContext;
 
     protected Page customerPage;
     protected Page restaurantPage;
     protected Page riderPage;
-
-    protected static final String APP_URL = "http://140.245.234.137/";
+    protected Page adminPage;
 
     @BeforeAll
     public static void setUpClass() {
         playwright = Playwright.create();
-        // Headless = true for stability in CI/Remote environments
-        browser = playwright.chromium().launch(new com.microsoft.playwright.BrowserType.LaunchOptions()
-                .setHeadless(false)
-                .setSlowMo(400) // 400ms delay between actions
-                .setArgs(java.util.Arrays.asList("--unsafely-treat-insecure-origin-as-secure=http://140.245.234.137")));
+        browser = playwright.chromium().launch(
+                new BrowserType.LaunchOptions()
+                        .setHeadless(TestConfig.HEADLESS)
+                        .setSlowMo(TestConfig.SLOW_MO)
+                        .setArgs(List.of(
+                                "--unsafely-treat-insecure-origin-as-secure=" + TestConfig.APP_URL.replaceAll("/$", "")
+                        ))
+        );
     }
 
     @AfterAll
     public static void tearDownClass() {
-        if (playwright != null) {
-            playwright.close();
-        }
+        if (browser != null) browser.close();
+        if (playwright != null) playwright.close();
     }
 
     @BeforeEach
     public void setUpContexts() {
-        // Create 3 isolated incognito browser contexts
-        customerContext = browser.newContext(new com.microsoft.playwright.Browser.NewContextOptions()
-                .setPermissions(java.util.Arrays.asList("geolocation", "notifications"))
-                .setGeolocation(12.9808, 77.6467));
-        restaurantContext = browser.newContext(new com.microsoft.playwright.Browser.NewContextOptions()
-                .setPermissions(java.util.Arrays.asList("geolocation", "notifications"))
-                .setGeolocation(12.9808, 77.6467));
-        riderContext = browser.newContext(new com.microsoft.playwright.Browser.NewContextOptions()
-                .setPermissions(java.util.Arrays.asList("geolocation", "notifications"))
-                .setGeolocation(12.9808, 77.6467));
+        customerContext = createContext("customer");
+        restaurantContext = createContext("restaurant");
+        riderContext = createContext("rider");
+        adminContext = createContext("admin");
 
-        // Create a new tab/page in each context
-        customerPage = customerContext.newPage();
-        restaurantPage = restaurantContext.newPage();
-        riderPage = riderContext.newPage();
-        
-        // Log console messages and handle dialogs for each page
-        for (Page page : java.util.Arrays.asList(customerPage, restaurantPage, riderPage)) {
-            page.onConsoleMessage(msg -> System.out.println("BROWSER CONSOLE: " + msg.type() + " " + msg.text()));
-            page.onDialog(dialog -> {
-                System.out.println("BROWSER DIALOG: " + dialog.message());
-                dialog.dismiss();
-            });
-        }
-        
-        customerPage.setDefaultTimeout(60000);
-        restaurantPage.setDefaultTimeout(60000);
-        riderPage.setDefaultTimeout(60000);
+        customerPage = createPage(customerContext);
+        restaurantPage = createPage(restaurantContext);
+        riderPage = createPage(riderContext);
+        adminPage = createPage(adminContext);
     }
 
     @AfterEach
     public void tearDownContexts() {
-        if (customerContext != null) customerContext.close();
-        if (restaurantContext != null) restaurantContext.close();
-        if (riderContext != null) riderContext.close();
+        closeQuietly(customerContext);
+        closeQuietly(restaurantContext);
+        closeQuietly(riderContext);
+        closeQuietly(adminContext);
+    }
+
+    // ── Helpers ──────────────────────────────────────────────────────────
+
+    private BrowserContext createContext(String label) {
+        Browser.NewContextOptions options = new Browser.NewContextOptions()
+                .setPermissions(Arrays.asList("geolocation", "notifications"))
+                .setGeolocation(TestConfig.GEO_LAT, TestConfig.GEO_LNG);
+
+        if (TestConfig.RECORD_VIDEO) {
+            options.setRecordVideoDir(Paths.get("target/videos/" + label));
+            options.setRecordVideoSize(1280, 720);
+        }
+        return browser.newContext(options);
+    }
+
+    private Page createPage(BrowserContext context) {
+        Page page = context.newPage();
+        page.setDefaultTimeout(TestConfig.DEFAULT_TIMEOUT);
+
+        page.onConsoleMessage(msg ->
+                System.out.println("[BROWSER " + msg.type().toUpperCase() + "] " + msg.text()));
+        page.onDialog(dialog -> {
+            System.out.println("[BROWSER DIALOG] " + dialog.message());
+            dialog.dismiss();
+        });
+        page.onResponse(response -> {
+            if (response.status() >= 400) {
+                System.out.println("[BROWSER NETWORK ERROR] " + response.status() + " " + response.request().method() + " " + response.url());
+            }
+        });
+
+        return page;
+    }
+
+    private void closeQuietly(BrowserContext ctx) {
+        try {
+            if (ctx != null) ctx.close();
+        } catch (Exception ignored) { }
+    }
+
+    /**
+     * Returns all active pages so the ScreenshotOnFailure extension can capture them.
+     */
+    public List<Page> getAllPages() {
+        return Arrays.asList(customerPage, restaurantPage, riderPage, adminPage);
     }
 }
